# agti

./: .env.example  .gitignore  LICENSE  README.md  analyze_ticker.py  pyproject.toml  run_ticker_analysis.py  setup.py  ticker_analysis_simple.py  ticker_analysis_simulation.py  ticker_results_temp0_20250721_133816.csv
agti.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
agti/agti_queries/: augmented_summaries.py
agti/agtisecurity/: alt_sec.py
agti/ai/: __init__.py  anthropic.py  anthropic_web.py  gemini.py  openai.py  openai_web.py  openrouter.py  qa_evaluation.py  ticker_analysis.py  together.py
agti/brokerage/etrade/: execution.py  risk_manager.py
agti/brokerage/ibrokers/: card_login.py  connection_spawn.py  market_data.py  portfolio_realignment.py
agti/central_banks/: __init__.py  augmented_summaries.py  australia.py  base_scrapper.py  canada.py  common.py  ecb.py  england.py  fed.py  japan.py  new_zealand.py  norges.py  norsk.py  sweden.py  switzerland.py  types.py  utils.py
agti/central_banks/scrapers/: australia.py  ecb.py  england.py  fed.py  japan.py  norges.py  sweden.py  switzerland.py
agti/central_banks/scrappers/: australia.py  canada.py  ecb.py  england.py  fed.py  japan.py  norges.py  sweden.py  switzerland.py
agti/data/apple/: apple_pricing.py
agti/data/bamsec/: load_transcripts.py
agti/data/bitcoin_network/: btc_network_data.py
agti/data/bloomberg/: intraday_pulls.py  standard_pulls.py
agti/utilities/: ai_jupyter.py  data_update_details.py  db_manager.py  etl_update.py  gen_pft_utesv2.py  generic_pft_utilities.py  google_sheet_manager.py  real_time_price_constructor.py  regression.py  scheduler.py  scraping.py  settings.py
agti/xbot/: twitterbot.py
agtisecurity/: hash_tools.py
basic_utilities/: generic_pft_utilities.py
data/sec_methods/: recent_data_batch_load.py  sec_filing_update.py
data/sharadar/: sharadar_bulk_update.py
data_updates/sec_methods/: request_utility.py
spms/typhus/: sec_updates.py
utilities/: db_manager.py  generic_pft_utilities.py  settings.py
utilities/node_tools/: agency_calculation.py  agency_coach.py  alerting_tool.py  basic_summary.py
utilities/user_tools/: user_cron_job.py
(+44 files in other folders)
