[project]
name        = "agti"
version     = "0.1.0"
description = "Post Fiat Finance focused node"
authors     = [{name = "Alex Good", email = "alex@agti.net"}]
readme      = "README.md"
license     = "MIT"
requires-python = ">=3.10"


dependencies = [
    "numpy>=2.2,<3.0",
    "pandas>=2.2,<3.0",
    "sqlalchemy>=2.0,<3.0",
    "cryptography>=44.0,<45.0",
    "xrpl-py>=4.0,<5.0",
    "requests>=2.32,<3.0",
    "toml>=0.10,<1.0",
    "nest_asyncio>=1.6,<2.0",
    "brotli>=1.1,<2.0",
    "sec-cik-mapper>=2.1,<3.0",
    "psycopg2-binary>=2.9,<3.0",
    "quandl>=3.7,<4.0",
    "schedule>=1.2,<2.0",
    "openai>=1.62,<2.0",
    "lxml>=5.3,<6.0",
    "gspread>=6.1,<7.0",
    "gspread_dataframe>=4.0,<5.0",
    "oauth2client>=4.1,<5.0",
    "selenium>=4.28,<5.0",
    "selenium-wire>=5.1,<6.0",
    "boto3>=1.38,<2.0",
    "blinker>=1.7,<2.0",
    "ua_generator>=2.0,<3.0"
]


[project.urls]
"Homepage" = "https://github.com/postfiatorg/pftpyclient"
"Bug Tracker" = "https://github.com/postfiatorg/pftpyclient/issues" 

[build-system]
requires      = ["poetry-core>=1.8.0"]
build-backend = "poetry.core.masonry.api"

